--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <!--这里放音乐哦 -->
 		<audio autoplay="autopaly">
-			<source src="./iloveu.mp3" audio="" mp3"="">
+			<source src="./love.m4a">
 		</audio>
 
         <div id="main">
